2008-04-30  Mike Kestner  <mkestner@novell.com>

	* generator/InterfaceGen.cs:
	* generator/Signal.cs: use generic signal marshaling instead of
	generating signature specific marshaling callbacks.
	* glib/glue/closure.c: glue for new closure impl.
	* glib/Object.cs: open up a couple hashes internally. 
	* glib/Signal.cs: hook in closure based connection and expose
	EmissionHook functionality for atk usage.
	* glib/SignalClosure.cs: new generic signal marshaling mechanism.
	* glib/ToggleRef.cs: null guarding in Target and let Signal remove
	itself from hash when it disposes itself.

2008-04-30  Mike Kestner  <mkestner@novell.com>

	* parser/gapi2xml.pl: put class struct field in the signal elems.
	* atk/atk-api-2.12.raw:
	* gdk/gdk-api-2.12.raw:
	* gtk/gtk-api-2.12.raw:

2008-04-28  Mike Kestner  <mkestner@novell.com>

	* glib/Value.cs : Add GParam support and beef up the Boxed
	type marshaling to support types with New methods via reflection.

2008-04-28  Mike Kestner  <mkestner@novell.com>

	* glib/GType.cs : Add a few missing static fields.

2008-04-24  Mike Kestner  <mkestner@novell.com>

	* gdk/Window.custom (Destroy): take a normal ref for the native
	method to release, and Dispose our toggle ref.  Fixes #382186.

2008-04-24  Andres G. Aragoneses  <aaragoneses@novell.com>

	* glib/Signal.cs: Remove unneeded cast.

2008-04-24  Andres G. Aragoneses  <aaragoneses@novell.com>

	* atk/Object.custom: custom protected method for firing
	the ChildrenChanged signal.
	* glib/Signal.cs: first implementation of a managed
	method for emitting signals.

2008-04-19  Mike Kestner  <mkestner@novell.com>

	* gtk/glue/statusicon.c: fix time parameter usage.  Not even sure
	how that compiled.  I <3 C.

2008-04-17  Mike Kestner  <mkestner@novell.com>

	* atk/glue/misc.c: glue for vms and singleton setup.
	* atk/Misc.custom: add OnThreadsEnter, OnThreadsLeave, and
	SetSingletonInstance members for Bridge implementors.
	[More of #365437]
