@@ -1,3 +1,10 @@
+2008-05-01  Mike Kestner  <mkestner@novell.com>
+
+	* generator/InterfaceGen.cs: use CName and mangle it.  ClassFieldName
+	is not guaranteed to be set now.
+	* generator/Signal.cs: read ClassFieldName from the api xml.  Move 
+	glue writer lookup inside the block to avoid exceptions for now.
+
 2008-04-30  Mike Kestner  <mkestner@novell.com>
 
 	* generator/InterfaceGen.cs:
